[TASK] Use JWT for storing and serving credentials

--- a/rev-manifest.json
+++ b/rev-manifest.json
@@ -1,7 +1,8 @@
 {
   "css/styles.css": "css/styles-4473e188e1.css",
-  "js/app.bundle.js": "js/app-6d8da983d0.bundle.js",
-  "js/dependencies.bundle.js": "js/dependencies-18c83c7c0b.bundle.js",
-  "js/dist-systemjs.config.js": "js/dist-systemjs-0b49d89f0d.config.js",
+  "global/js/jsrsasign.js": "global/js/jsrsasign-97a6a01b15.js",
+  "js/app.bundle.js": "js/app-4571bd3081.bundle.js",
+  "js/dependencies.bundle.js": "js/dependencies-a50301560b.bundle.js",
+  "js/dist-systemjs.config.js": "js/dist-systemjs-36719a839b.config.js",
   "js/polyfills.js": "js/polyfills-9e3fd751f6.js"
 }
