--- a/rev-manifest.json
+++ b/rev-manifest.json
@@ -1,8 +1,10 @@
 {
   "css/styles.css": "css/styles-4473e188e1.css",
   "global/js/jsrsasign.js": "global/js/jsrsasign-97a6a01b15.js",
-  "js/app.bundle.js": "js/app-199dd0eb98.bundle.js",
+  "js/app.bundle.js": "js/app-7d67aa0eba.bundle.js",
   "js/dependencies.bundle.js": "js/dependencies-a50301560b.bundle.js",
   "js/dist-systemjs.config.js": "js/dist-systemjs-36719a839b.config.js",
-  "js/polyfills.js": "js/polyfills-9e3fd751f6.js"
+  "js/polyfills.js": "js/polyfills-9e3fd751f6.js",
+  "sw-5cf67b0737.js": "sw-5cf67b0737-5cf67b0737.js",
+  "sw.js": "sw-5cf67b0737.js"
 }
