--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
-  "name": "JSMusicDB Next",
-  "short_name": "JSDB",
-  "lang": "en-US",
-  "start_url": "/",
-  "display": "standalone",
-  "theme_color": "#0078D7",
-  "icons": [
-    {
-      "src": "global/images/logo.png",
-      "sizes": "1024x1024",
-      "type": "image/png"
-    }
-  ]
+    "name": "JSMusicDB Next",
+    "short_name": "JSDB",
+    "lang": "en-US",
+    "start_url": "/",
+    "display": "standalone",
+    "theme_color": "#0078D7",
+    "background_color": "#ffffff",
+    "icons": [{
+        "src": "global/images/logo.png",
+        "sizes": "1024x1024",
+        "type": "image/png"
+    }]
 }
