--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,16 @@
     "display": "standalone",
     "theme_color": "#0078D7",
     "background_color": "#000000",
-    "icons": [{
-        "src": "global/images/icon-512-white.png",
-        "sizes": "512x512",
-        "type": "image/png"
-    }]
+    "icons": [
+        {
+            "src": "global/images/icon-512-white.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "global/images/icon-512-white.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
