--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsmusicdbnext-prebuilt",
   "description": "prebuilt stable versions of jsmusicdbnext",
-  "version": "2.9.0-beta",
+  "version": "2.9.0",
   "dependencies": {}
 }
